manual-argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /argo-cd(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
